# mlir-tutorial-branch

./: .gitignore  CMakeLists.txt  README.md  calc_tile_sizes.py  compile_analyze.sh  opt-build.sh  profile.sh  run.sh  sweep_over_tiles.sh  tile_postproc_baseline.sh  tile_postproc_ours.sh
benchmarks/: conv3d.c  jacobi3d.c  matmul.c  vecmatmul.c
benchmarks/matmul_output/: tiled_exec
lib/Transform/Affine/: AffineFullUnroll.cpp  CMakeLists.txt  Passes.h  Passes.td  PreTileAnalysis.cpp  PreTileAnalysis.h  RaiseToAffine.cpp  RaiseToAffine.h  RaiseToAffinePass.cpp  RaiseToAffinePass.h  TileSizeSelection.cpp  TileSizeSelection.h  TileSizeSelectionPass.cpp  TileSizeSelectionPass.h
tools/: CMakeLists.txt  mlir-poly-tiling-opt.cpp  tutorial-opt.cpp
